added volume button changes speaker volume. tidy up